added background color to grid

--- a/Index.html
+++ b/Index.html
@@ -19,17 +19,17 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-md-4">TABLE</div>
+        <div class="col-md-4" style="background-color:aqua">TABLE<br>TABLE</div>
         <div class="col-md-8">
             <div class="row">
-                <div class="col-md-12">SLIDER</div>
+                <div class="col-md-12" style="background-color:purple">SLIDER</div>
             </div>
             <div class="row">
-                <div class="col-md-6">GRAPH 1</div>
-                <div class="col-md-6">GRAPH 2</div>
+                <div class="col-md-6" style="background-color:green">GRAPH 1<br>GRAPH 1</div>
+                <div class="col-md-6" style="background-color:fuchsia">GRAPH 2</div>
             </div>
             <div class="row">
-                <div class="col-md-12">GRAPH 3</div>
+                <div class="col-md-12" style="background-color:gray">GRAPH 3</div>
             </div>
         </div>
       <!-- <div class="col-md-2">
