app.js in progress

--- a/Index.html
+++ b/Index.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6" style="background-color:green">GRAPH 1<br>GRAPH 1</div>
-                <div class="col-md-6" style="background-color:fuchsia">GRAPH 2</div>
+                <div class="col-md-6" id="hbar" style="background-color:green">GRAPH 1<br>GRAPH 1</div>
+                <div class="col-md-6" id="pie" style="background-color:fuchsia">GRAPH 2</div>
             </div>
             <div class="row">
                 <div class="col-md-12" style="background-color:gray">GRAPH 3</div>
@@ -66,7 +66,6 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.10/lodash.min.js"></script>
-
   
 </body>
 
