group and stack bar graphs

--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,8 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-md-4" style="background-color:aqua">TABLE<br>TABLE</div>
-        <div class="col-md-8">
+        <div class="col-md-3" style="background-color:aqua">TABLE<br>TABLE</div>
+        <div class="col-md-9">
             <div class="row">
                 <div class="col-md-12" style="background-color:purple">
                   <select id="selDataset" onchange="optionChanged(this.value)">
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6" id="hbar" style="background-color:green">GRAPH 1<br>GRAPH 1</div>
-                <div class="col-md-6" id="pie" style="background-color:fuchsia">GRAPH 2</div>
+                <div class="col-md-8" id="hbar" style="height: 500px"></div>
+                <div class="col-md-4" id="stackBar" style="height: 500px"></div>
             </div>
             <div class="row">
                 <div class="col-md-12" style="background-color:gray">GRAPH 3</div>
