--- a/Index.html
+++ b/Index.html
@@ -19,10 +19,10 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-md-3" style="background-color:aqua">TABLE<br>TABLE</div>
+        <div class="col-md-3"></div>
         <div class="col-md-9">
             <div class="row">
-                <div class="col-md-12" style="background-color:purple">
+                <div class="col-md-12">
                   <select id="selDataset" onchange="optionChanged(this.value)">
                   </select>
                 </div>
@@ -32,34 +32,9 @@
                 <div class="col-md-4" id="stackBar" style="height: 500px"></div>
             </div>
             <div class="row">
-                <div class="col-md-12" style="background-color:gray">GRAPH 3</div>
+                <div class="col-md-12" id="dotPlot"></div>
             </div>
         </div>
-      <!-- <div class="col-md-2">
-        <div class="well">
-          <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)">
-          </select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div> -->
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
